--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         volumes:
             - ./services/monolith:/var/www/symfony/
         ports:
-            - 80:80
+            - ${MONOLITH_HTTP_PORT:-10001}:80
 
     monolith.db:
         image: mysql:8.0.20
@@ -21,7 +21,7 @@ services:
             MYSQL_USER: ${MONOLITH_MYSQL_USER:-app_user}
             MYSQL_PASSWORD: ${MONOLITH_MYSQL_PASSWORD:-helloworld}
         ports:
-            - ${MONOLITH_MYSQL_PORT:-3306}:3306
+            - ${MONOLITH_MYSQL_PORT:-10002}:3306
 
     monolith.php:
         build:
@@ -31,6 +31,24 @@ services:
                 TIMEZONE: ${TIMEZONE:-America/New_York}
         volumes:
             - ./services/monolith:/var/www/symfony/
+
+    webapp:
+        build:
+            context: ./env/webapp
+            dockerfile: Dockerfile
+        ports:
+            - "${WEBAPP_VUE_CLI_UI_PORT:-11001}:8000"
+            - "${WEBAPP_HTTP_PORT:-11002}:8080"
+            - '3000:3000'
+        volumes:
+            - ./services/webapp:/var/webapp
+        #            - ./env/prod/spa/dist:/var/spa/dist
+        stdin_open: true
+        tty: true
+        environment:
+            - CHOKIDAR_USEPOLLING=true
+            - USE_VUE_UI=${WEBAPP_USE_VUE_UI:-0}
+        working_dir: /var/webapp
 
 volumes:
     monolith_db_volume:
