--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,12 +42,12 @@ services:
             - '3000:3000'
         volumes:
             - ./services/webapp:/var/webapp
-        #            - ./env/prod/spa/dist:/var/spa/dist
         stdin_open: true
         tty: true
         environment:
             - CHOKIDAR_USEPOLLING=true
             - USE_VUE_UI=${WEBAPP_USE_VUE_UI:-0}
+            - VUE_APP_MONOLITH_HTTP_PORT=${MONOLITH_HTTP_PORT:-10001}
         working_dir: /var/webapp
 
 volumes:
