- Installed authentication bootstrap (jetstream). - Installed passport. - Changed the user identifier from an auto-incremental integer to UUID. - Implemented the login/logout listeners to broadcast the events to the global queue.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,18 @@ services:
         ports:
             - '${ACCOUNTS_REDIS_PORT:-12004}:6379'
 
+    localstack:
+        image: localstack/localstack:latest
+        ports:
+            - "4566:4566"
+        environment:
+            - SERVICES=sqs
+            - DEBUG=1
+            - PORT_WEB_UI=8080
+            - DATA_DIR=/tmp/localstack/data
+        volumes:
+            - './env/localstack/data:/tmp/localstack'
+
 volumes:
     monolith_db_volume:
     monolith_composer_volume:
